--- a/css/styles.css
+++ b/css/styles.css
@@ -607,6 +607,7 @@ transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-b
 position: absolute;   
 top: 50%; 
 left: 50%;
+padding: 24px;
 
 transform: translateX(-50%) translateY(-50%);
 min-height: 584px;
@@ -628,6 +629,7 @@ box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.20), 0px 1px 3px 0px rgba(0, 0, 0, 0
     height: 24px;
 
     padding: 0;
+   
 
     display: flex;
     align-items: center;
@@ -688,3 +690,88 @@ overflow: hidden;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
+
+
+
+
+.modal-caption {
+    display: block;
+    width: 360px;
+    margin-bottom: 16px;
+    margin-top: 48px;
+color:  #2E2F42;
+text-align: center;
+font-size: 16px;
+font-style: normal;
+font-weight: 500;
+line-height: 1,5;
+letter-spacing: 0.02em;
+}
+.modal-form {
+
+}
+.modal-form-field {
+display: block;
+margin-bottom: 8px;
+position: relative;
+}
+.modal-form-label {
+    display: block;
+    margin-bottom: 4px;
+color:  #8E8F99;
+font-size: 12px;
+font-style: normal;
+font-weight: 400;
+line-height: 1,2;
+letter-spacing: 0.48px;
+}
+.modal-form-input {
+ width: 100%;
+ height: 40px;
+ outline: transparent;
+
+ font-size: 18px;
+ padding: 11px 0;
+ padding-left: 38px;
+border-radius: 4px;
+border: 1px solid rgba(46, 47, 66, 0.40);
+ 
+
+}
+.modal-form-icon{
+ fill: #2E2F42;
+ position: absolute;
+ bottom: 11px;
+ left: 16px;
+}
+
+.modal-form-input:focus {
+border: 1px solid  #4D5AE5;
+}
+
+.modal-form-input:focus + .modal-form-icon {
+    fill: #4D5AE5;
+}
+
+.modal-form-comment {
+    width: 100%;
+    height: 120px;
+    padding: 8px 16px;
+    resize: none;
+    border-radius: 4px;
+border: 1px solid  rgba(46, 47, 66, 0.40);
+outline: transparent;
+
+ color:  rgba(46, 47, 66, 0.40);
+font-size: 12px;
+
+letter-spacing: 0.48px;
+}
+.modal-form-comment::placeholder {
+    color:  currentColor;
+}
+
+.modal-form-comment:focus {
+    border: 1px solid  #4D5AE5;
+}
+
