--- a/css/styles.css
+++ b/css/styles.css
@@ -775,3 +775,12 @@ letter-spacing: 0.48px;
     border: 1px solid  #4D5AE5;
 }
 
+.subscribe-form {
+    widt: 263px;
+    height: 40px;
+    padding: 8px 16px;
+    border-radius: 4px;
+border: 1px solid  #FFF;
+box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+
+}
