--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,7 @@
     --btn: #4D5AE5;
     --text: #434455;
     --lightslate: #8E8F99;
+    --modal: #404bbf;
     --anim: 400ms ease-in;
 }
 
@@ -607,7 +608,7 @@ transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-b
 position: absolute;   
 top: 50%; 
 left: 50%;
-padding: 24px;
+padding: 72px 24px 24px 24px;
 
 transform: translateX(-50%) translateY(-50%);
 min-height: 584px;
@@ -698,7 +699,6 @@ overflow: hidden;
     display: block;
     width: 360px;
     margin-bottom: 16px;
-    margin-top: 48px;
 color:  #2E2F42;
 text-align: center;
 font-size: 16px;
@@ -712,8 +712,12 @@ letter-spacing: 0.02em;
 }
 .modal-form-field {
 display: block;
-margin-bottom: 8px;
-position: relative;
+position: relative; 
+color:  var(--lightslate);
+font-size: 12px;
+line-height: 1.17;
+letter-spacing: 0.04em;
+margin-bottom: 4px;
 }
 .modal-form-label {
     display: block;
@@ -728,13 +732,14 @@ letter-spacing: 0.48px;
 .modal-form-input {
  width: 100%;
  height: 40px;
+ background-color: transparent;
  outline: transparent;
 
  font-size: 18px;
- padding: 11px 0;
  padding-left: 38px;
 border-radius: 4px;
 border: 1px solid rgba(46, 47, 66, 0.40);
+transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
  
 
 }
@@ -743,10 +748,13 @@ border: 1px solid rgba(46, 47, 66, 0.40);
  position: absolute;
  bottom: 11px;
  left: 16px;
+ top: 50%;
+ transform: translateY(-50%);
+ transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-form-input:focus {
-border: 1px solid  #4D5AE5;
+ .modal-form-input:focus {
+border-color: #4D5AE5;
 }
 
 .modal-form-input:focus + .modal-form-icon {
@@ -759,13 +767,22 @@ border: 1px solid  #4D5AE5;
     padding: 8px 16px;
     resize: none;
     border-radius: 4px;
+    line-height: 1.17;
+    font-size: 12px;
+    letter-spacing: 0.04em;
+    color: rgba(46, 47, 66, 0.4);
 border: 1px solid  rgba(46, 47, 66, 0.40);
 outline: transparent;
+background-color: transparent;
+padding: 8px 16px;
+transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
- color:  rgba(46, 47, 66, 0.40);
-font-size: 12px;
+.modal-form-comment:focus {
+border-color: #4D5AE5;
+}
 
-letter-spacing: 0.48px;
+
+
 }
 .modal-form-comment::placeholder {
     color:  currentColor;
@@ -783,4 +800,46 @@ letter-spacing: 0.48px;
 border: 1px solid  #FFF;
 box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
 
+}
+
+.field {
+    margin-bottom: 8px; 
+}
+
+.input-container {
+    position: relative; 
+}
+.modal-comment {
+    margin-bottom: 16px;
+}
+.checkbox-container {
+margin-bottom: 24px;
+}
+
+.modal-form-agreement {
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: var(--lightslate);
+
+}
+.modal-form-agreement-desc {
+    width: 16px;
+    height: 16px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 2px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    fill: transparent;
+}
+
+.modal-form-checkbox:checked + .modal-form-custom-checkbox {
+background-color: var(--modal);
+border: none;
+fill: var(--logo-light)
+}
+.modal-link{
+    color: var(--btn);
 }
