--- a/css/styles.css
+++ b/css/styles.css
@@ -571,6 +571,9 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 .footer-networks-item {
    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.footer-list {
+    margin-right: 80px;
+}
 .footer-title {
         color:  #FFF;
         margin-bottom: 16px;
@@ -605,19 +608,19 @@ transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-b
     visibility: hidden;
 }
 .modal {
-position: absolute;   
-top: 50%; 
-left: 50%;
-padding: 72px 24px 24px 24px;
 
-transform: translateX(-50%) translateY(-50%);
-min-height: 584px;
-transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-width: 408px;
-height: 584px;
-border-radius: 4px;
-background: var(--dairy, #FCFCFC);
-box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.20), 0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 1px 1px 0px rgba(0, 0, 0, 0.14);
+position: absolute;
+    top: 50%;
+    left: 50%;
+    max-width: 408px;
+    width: 100%;
+    min-height: 584px;
+    transform: translate(-50%, -50%) scale(1);
+    padding: 72px 24px 24px 24px;
+    background-color: #FCFCFC;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-icon{
     stroke: #2E2F42;
@@ -704,11 +707,16 @@ text-align: center;
 font-size: 16px;
 font-style: normal;
 font-weight: 500;
-line-height: 1,5;
+line-height: 1.5;
 letter-spacing: 0.02em;
 }
 .modal-form {
-
+display: flex;
+    flex-direction: column;
+    gap: 8px;
+    padding: 8px;
+    max-width: 360px;
+    border: none;
 }
 .modal-form-field {
 display: block;
@@ -792,15 +800,7 @@ border-color: #4D5AE5;
     border: 1px solid  #4D5AE5;
 }
 
-.subscribe-form {
-    widt: 263px;
-    height: 40px;
-    padding: 8px 16px;
-    border-radius: 4px;
-border: 1px solid  #FFF;
-box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
 
-}
 
 .field {
     margin-bottom: 8px; 
@@ -823,7 +823,7 @@ margin-bottom: 24px;
     color: var(--lightslate);
 
 }
-.modal-form-agreement-desc {
+.checkbox-prop {
     width: 16px;
     height: 16px;
     border: 1px solid rgba(46, 47, 66, 0.4);
@@ -833,9 +833,10 @@ margin-bottom: 24px;
     align-items: center;
     justify-content: center;
     fill: transparent;
+    cursor: pointer; 
 }
 
-.modal-form-checkbox:checked + .modal-form-custom-checkbox {
+.modal-form-checkbox:checked + .user-privacy .checkbox-prop {
 background-color: var(--modal);
 border: none;
 fill: var(--logo-light)
@@ -843,3 +844,65 @@ fill: var(--logo-light)
 .modal-link{
     color: var(--btn);
 }
+.user-privacy {
+        margin-top: 8px;
+            font-size: 12px;
+            line-height: 1.17;
+            letter-spacing: 0.48px;
+            color: #8E8F99;
+            min-height: 16px;
+}
+.form-btn {
+    align-self: center;
+        padding: 16px 32px;
+        display: block;
+        color: #FFFFFF;
+        background-color: var(--btn);
+        height: 56px;
+        min-width: 169px;
+        border: none;
+        cursor: pointer;
+        border-radius: 4px;
+        font-weight: 500;
+        line-height: 1.5;
+        letter-spacing: 0.04em;
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    .subscribe-form {
+            display: flex;
+            gap: 24px;
+    }
+    .subscribe-form-input {
+        width: 264px;
+        height: 40px;
+        border: 1px solid #ffffff;
+        background-color: transparent;
+        font-size: 12px;
+        line-height: 1.5;
+        letter-spacing: 0.04em;
+        padding-left: 16px;
+        filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+        border-radius: 4px;
+        color: #ffffff;
+    }
+    .subscribe-form-input::placeholder {
+        color: #ffffff;
+    }
+    .footer-btn {
+        min-width: 165px;
+        height: 40px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-weight: 500;
+        line-height: 1.5;
+        letter-spacing: 0.04em;
+        color: #ffffff;
+        background-color: #4D5AE5;
+        border: none;
+        border-radius: 4px;
+    }
+    .footer-btn-icon {
+        margin-left: 16px;
+    }
