--- a/css/styles.css
+++ b/css/styles.css
@@ -836,10 +836,10 @@ margin-bottom: 24px;
     cursor: pointer; 
 }
 
-.modal-form-checkbox:checked +  .checkbox-prop {
+.modal-form-checkbox:checked + .modal-form-agreement .checkbox-prop {
 background-color: var(--modal);
 border: none;
-fill: var(--logo-light)
+fill: var(--logo-light);
 }
 .modal-link{
     color: var(--btn);
