--- a/css/styles.css
+++ b/css/styles.css
@@ -699,13 +699,11 @@ overflow: hidden;
 
 
 .modal-caption {
-    display: block;
-    width: 360px;
+  
     margin-bottom: 16px;
 color:  #2E2F42;
 text-align: center;
 font-size: 16px;
-font-style: normal;
 font-weight: 500;
 line-height: 1.5;
 letter-spacing: 0.02em;
@@ -714,8 +712,6 @@ letter-spacing: 0.02em;
 display: flex;
     flex-direction: column;
     gap: 8px;
-    padding: 8px;
-    max-width: 360px;
     border: none;
 }
 .modal-form-field {
@@ -742,7 +738,8 @@ letter-spacing: 0.48px;
  height: 40px;
  background-color: transparent;
  outline: transparent;
-
+letter-spacing: 0.04em;
+    color: rgba(46, 47, 66, 0.4);
  font-size: 18px;
  padding-left: 38px;
 border-radius: 4px;
@@ -772,7 +769,6 @@ border-color: #4D5AE5;
 .modal-form-comment {
     width: 100%;
     height: 120px;
-    padding: 8px 16px;
     resize: none;
     border-radius: 4px;
     line-height: 1.17;
@@ -803,7 +799,7 @@ border-color: #4D5AE5;
 
 
 .field {
-    margin-bottom: 8px; 
+   
 }
 
 .input-container {
@@ -858,7 +854,6 @@ fill: var(--logo-light);
         display: block;
         color: #FFFFFF;
         background-color: var(--btn);
-        height: 56px;
         min-width: 169px;
         border: none;
         cursor: pointer;
@@ -868,6 +863,10 @@ fill: var(--logo-light);
         letter-spacing: 0.04em;
         transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
+        .form-btn:hover,
+                .form-btn:focus {
+                    background-color: #404BBF;
+                }
 
     .subscribe-form {
             display: flex;
@@ -903,6 +902,11 @@ fill: var(--logo-light);
         border: none;
         border-radius: 4px;
     }
+    .footer-btn:hover,
+    .footer-btn:focus {
+background-color: #404BBF;
+    }
+        
     .footer-btn-icon {
         margin-left: 16px;
     }
