--- a/css/styles.css
+++ b/css/styles.css
@@ -711,7 +711,6 @@ letter-spacing: 0.02em;
 .modal-form {
 display: flex;
     flex-direction: column;
-    gap: 8px;
     border: none;
 }
 .modal-form-field {
@@ -799,7 +798,7 @@ border-color: #4D5AE5;
 
 
 .field {
-   
+margin-bottom: 8px;
 }
 
 .input-container {
